
CHANGES IN VERSION 0.1.3
-------------------------
o Added the option to calculate the power for unbalanced DE sets (using the variable
  ssize.ratio.de) for all power calculation functions (not yet for the optimization). 
  The variable ssize.ratio.de represents the ratio of the group 1 sample size to 
  the group 0 sample size (control group). For this, the first argument of the 
  internal function power.de was changed from nSamples.group0 to nSamples (total sample
  size).
o Added the option to use a different estimate for the number of independent SNPs per 
  locus using the variable indepSNPs (default is still 10). The parameter is 
  important for the Bonferroni multiple testing correction, as the total number of tests
  to correct for is estimated by number of genes times number of independent SNPs 
  per locus.

CHANGES IN VERSION 0.1.2
-------------------------

o Corrected bug for simulated eQTL power (significance parameter not processed correctly)
o Added the parameter "simThreshold" to define the maximal mean threshold for simulation
  the eQTL power (default 4)
o Changed default value of parameter "useSimulatedPower" to FALSE for budget optimization
  (this speeds the calculations significantly with no large effects on the optimal
  parameter combinations). The functions starting with "optimize.constant.budget" are
  affected.
o Removed the DESeq dependency by implementing the required methods within scPower (using
  exactly the DESeq approach), as DESeq is deprecated on Bioconductor
  

CHANGES IN VERSION 0.1.1
-------------------------

o Added FDR as additional multiple testing option
o Increased power accuracy of eQTL genes with small mean values by simulation (option can 
  be turned off to speed up calculations)
o Option to skip power calculation of genes with very little expression probability to 
  speed up overall power calculation

