@@ -45,12 +45,12 @@ create.pseudobulk<-function(expr.singlets, annotation, colName="cell.type"){
 #' Get expressed genes from pseudobulk
 #'
 #' Return a data frame with all genes, which are defined as expressed per cell type (at least min.counts
-#' in perc.indiv fraction of all individuals)
+#' in perc.indiv.expr fraction of all individuals)
 #'
 #' @param expr.array 3d pesudobulk matrix of genes x individuals x cell type (output of create.pseudobulk)
 #' @param min.counts  More than is number of UMI counts for each gene per individual and cell type is required
 #' to defined it as expressed in one individual
-#' @param perc.indiv  Percentage of individuals that need to have this gene expressed
+#' @param perc.indiv.expr  Percentage of individuals that need to have this gene expressed
 #' to define it as globally expressed
 #'
 #' @return Data frame with all expressed genes per cell type (columns: gene name, cell type,
@@ -58,7 +58,7 @@ create.pseudobulk<-function(expr.singlets, annotation, colName="cell.type"){
 #'
 #' @export
 #'
-calculate.gene.counts<-function(expr.array,min.counts=3,perc.indiv=0.5){
+calculate.gene.counts<-function(expr.array,min.counts=3,perc.indiv.expr=0.5){
 
   require(reshape2)
 
@@ -69,7 +69,7 @@ calculate.gene.counts<-function(expr.array,min.counts=3,perc.indiv=0.5){
   colnames(pct.expr.reformated) <- c("gene", "cell.type", "percent.expressed")
 
   #Delete all, which are not expressed in at least half of the individuals
-  pct.expr.reformated <- pct.expr.reformated[pct.expr.reformated$percent.expressed > perc.indiv,]
+  pct.expr.reformated <- pct.expr.reformated[pct.expr.reformated$percent.expressed > perc.indiv.expr,]
 
   if(nrow(pct.expr.reformated)==0){
     warning("No expressed genes with this cut-off found!")
@@ -106,7 +106,7 @@ calculate.gene.counts<-function(expr.array,min.counts=3,perc.indiv=0.5){
 estimate.exp.prob.param<-function(nSamples,readDepth,nCellsCt,
                                   read.umi.fit,gamma.mixed.fits,
                                   ct,disp.fun.param,
-                                  min.counts=3,perc.indiv=0.5,
+                                  min.counts=3,perc.indiv.expr=0.5,
                                   cutoffVersion="absolute",
                                   nGenes=21000,samplingMethod="quantiles"){
 
@@ -116,7 +116,7 @@ estimate.exp.prob.param<-function(nSamples,readDepth,nCellsCt,
                                      nGenes,samplingMethod)
 
   return(estimate.exp.prob.values(mean.dsp.df$means,1/mean.dsp.df$dsp,
-                                  nCellsCt,nSamples,min.counts,perc.indiv,
+                                  nCellsCt,nSamples,min.counts,perc.indiv.expr,
                                   cutoffVersion))
 
 }
@@ -149,7 +149,7 @@ estimate.exp.prob.param<-function(nSamples,readDepth,nCellsCt,
 estimate.exp.prob.count.param<-function(nSamples,nCellsCt,meanCellCounts,
                                         gamma.mixed.fits,
                                         ct,disp.fun.param,
-                                        min.counts=3,perc.indiv=0.5,
+                                        min.counts=3,perc.indiv.expr=0.5,
                                         cutoffVersion="absolute",
                                         nGenes=21000,samplingMethod="quantiles",
                                         countMethod="UMI"){
@@ -214,7 +214,7 @@ estimate.exp.prob.count.param<-function(nSamples,nCellsCt,meanCellCounts,
   gene.disps<-sample.disp.values(gene.means,disp.fun)
 
   return(estimate.exp.prob.values(gene.means,1/gene.disps,nCellsCt,
-                                  nSamples,min.counts,perc.indiv,cutoffVersion))
+                                  nSamples,min.counts,perc.indiv.expr,cutoffVersion))
 
 }
 
@@ -302,11 +302,12 @@ estimate.mean.dsp.values<-function(readDepth,read.umi.fit,
 #' @param nCellsCt Mean number of cells per individual and cell type
 #' @param nSamples  Total sample size
 #' @param min.counts  Expression cutoff in one individual: if cutoffVersion=absolute,
-#'        more than is number of UMI counts for each gene per individual and
+#'        more than this number of UMI counts for each gene per individual and
 #'        cell type is required; if cutoffVersion=percentage, more than this percentage
 #'        of cells need to have a count value large than 0
-#' @param perc.indiv  Expression cutoff on the population level: percentage of
-#'        individuals that need to have this gene expressed to define it as globally expressed
+#' @param perc.indiv.expr  Expression cutoff on the population level: if number < 1, percentage of
+#'        individuals that need to have this gene expressed to define it as globally expressed;
+#'        if number >=1 absolute number of individuals that need to have this gene expressed
 #' @param cutoffVersion Either "absolute" or "percentage" leading to different
 #'        interpretations of min.counts (see description above)
 #'
@@ -315,7 +316,7 @@ estimate.mean.dsp.values<-function(readDepth,read.umi.fit,
 #' @export
 #'
 estimate.exp.prob.values<-function(mu,size,nCellsCt,nSamples,
-                                   min.counts=3,perc.indiv=0.5,
+                                   min.counts=3,perc.indiv.expr=0.5,
                                    cutoffVersion="absolute"){
 
   #Generate basis data.frame
@@ -345,7 +346,11 @@ estimate.exp.prob.values<-function(mu,size,nCellsCt,nSamples,
   }
 
   #Calculate probability that > prob indivs have count > n
-  fits.allIndivs$indiv.probs<-1 - pbinom(perc.indiv*nSamples,nSamples,fits.allIndivs$count.probs)
+  if(perc.indiv.expr < 1){
+    fits.allIndivs$indiv.probs<-1 - pbinom(perc.indiv.expr*nSamples,nSamples,fits.allIndivs$count.probs)
+  } else {
+    fits.allIndivs$indiv.probs<-1 - pbinom(perc.indiv.expr,nSamples,fits.allIndivs$count.probs)
+  }
 
   #Return expression probability of each gene
   return(fits.allIndivs$indiv.probs)
