@@ -48,6 +48,15 @@ calculate.probabilities(
 filtered for the correct cell type (required columns: ct (cell type),
 asymptDisp, extraPois (both from taken from DEseq))}
 
+\item{min.UMI.counts}{Expression cutoff in one individual: if cutoffVersion=absolute,
+more than this number of UMI counts for each gene per individual and
+cell type is required; if cutoffVersion=percentage, more than this percentage
+of cells need to have a count value large than 0}
+
+\item{perc.indiv.expr}{Expression cutoff on the population level: if number < 1, percentage of
+individuals that need to have this gene expressed to define it as globally expressed;
+if number >=1 absolute number of individuals that need to have this gene expressed}
+
 \item{cutoffVersion}{Either "absolute" or "percentage" leading to different
 interpretations of min.counts (see description above)}
 
